Fix hamburger menu icon not showing

--- a/Commitment_to_Change_App/static/css/styles.css
+++ b/Commitment_to_Change_App/static/css/styles.css
@@ -273,6 +273,10 @@ form {
     background-color:var(--background);
 }
 
+.navbar-toggler {
+    color: var(--primary-text);
+}
+
 .svg-container {
     display: inline-block;
     position: relative;
